Generate Pelican site

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,6 +36,7 @@
                 <h1>About</h1>
                 <p>Hey all, I'm a independent solo game developer in my early 30's. I founded this blog because I want to have a place to talk about my game development journey and as a point of reference for those who want to get caught up on my progress while watching my game dev streams. If you want to get caught up on my first project, you can find the first post <a href="/unnamed-tower-defense-game-part-1-inspiration-and-concept.html">here.</a></p>
 <p>I stream most weekdays 1pm-6pm EST at <a href="https://stream.direllamagames.com">stream.direllamagames.com</a></p>
+<p>If you want to follow development more closely and make suggestions, consider joining my <a href="https://discord.gg/JMvJbzg2gt">discord</a></p>
 <p>My YouTube VOD repository can be found <a href="https://www.youtube.com/@LlamaSE-j1z">here.</a></p>
 <p>For suggestions, feedback and inquiries: <a href="mailto:LlamaSE@direllamagames.com">LlamaSE@direllamagames.com</a></p>
             </div>
